w trakcie pracy